--- a/templates/queries.html
+++ b/templates/queries.html
@@ -60,6 +60,12 @@
         </div>
     </div>
 
+    <div class="card">
+        <div class="container">
+            <a href="{{ url_for('ledger_report') }}">Trial Balance</a>
+        </div>
+    </div>
+
     </div>
 </section> 
 
