--- a/templates/query/ledger_report.html
+++ b/templates/query/ledger_report.html
@@ -9,29 +9,60 @@ Ledgers
 {% endblock  %}
 
 {%block content%}
-
+<style>
+    .bold {
+      border: 2px solid black; /* Bold bottom border */
+    }
+    
+    .thin-all {
+      border: 1px solid #ccc; /* Thin borders on all sides */
+    }
+    
+    .ultra-thin-all {
+      border: 0.5px solid #ccc; /* Even thinner borders on all sides */
+    }
+  </style>
 <body id="person">
     <table class="tab-content">
         <tbody>
             <tr>
 
-                <th>Cr/Dr</th>
+                <th>Cr/Db</th>
+                <th>Code</th>
                 <th>Name</th>
                 <th>Description</th>
-                <th>Balance_bfd</th>
-                <th>Amount</th>
+                <th>Balance</th>
                
+            </tr>
+            <tr>
+                <th colspan="5">Assets</th>
+            </tr>
+            <tr>
+                <td>Cr</td>
+                <td>400100  </td>
+                <td><a href="{{url_for('get_loan')}}">Account Receivables</a></td>  <!-- Fetching the person's name -->
+                <td>Total Recievables from Loans</td>
+                <td>{{ total_accounts_receivable| currency }}</td>
+                
+            </tr>
+            <tr>
+                <td>Cr</td>
+                <td>400101  </td>
+                <td><a href="{{url_for('get_loan')}}">Company Receivables</a></td>  <!-- Fetching the person's name -->
+                <td>Total Recievables from Companies</td>
+                <td>{{ company| currency }}</td>
+                
             </tr>
             {% for bank in banks %}
             <tr>
                 <td>Cr</td>
-                <td>{{ 400100+bank.id }}</td>
-                <td><a href="{{url_for('individual_bank_report',bank_id=bank.id)}}">{{ bank.name }}</a></td>  <!-- Fetching the person's name -->
+                <td>{{ 400101+bank.id }}</td>
+                <td><a href="">{{ bank.name }}</a></td>  <!-- Fetching the person's name -->
                 <td>{{ bank.description}}</td>
-                <td>{{ bank.balance_bfd | currency }}</td>
                 <td>{{ bank.new_balance | currency }}</td>
                 
             </tr>
+            
             {% endfor %}
             
             {% for asset in assets %}
@@ -39,75 +70,94 @@ Ledgers
                     <td>Cr</td>
                     <td>{{ 400150+asset.id }}</td>
                     <td>
-                        <a href="{{url_for('savings_account',person_id=payment.payer.id)}}">{{ asset.name}}</a>
+                        <a href="">{{ asset.name}}</a>
                     </td>
                     <td>{{ asset.description}}</td>
-                    <td>{{ asset.balance_bfd | currency }}</td>
-                    <td>{{ asset.amount | currency}}</td>
+                    <td>{{ asset.balance | currency }}</td>
+
                     
                 </tr>
-            {% endfor %}
-            {% for bank in banks %}
-            <tr>
-                <td>Cr</td>
-                <td>{{ 400500+bank.id }}</td>
-                <td><a href="{{url_for('individual_bank_report',bank_id=bank.id)}}">{{ bank.name }}</a></td>  <!-- Fetching the person's name -->
-                <td>{{ bank.balance_bfd | currency }}</td>
-                <td>{{ bank.new_balance | currency }}</td>
-                
-            </tr>
-            {% endfor %}
-            {% for investment in investments %}
-            <tr>
-                <td>Cr</td>
-                <td>{{ 400200+investment.id }}</td>
-                <td><a href="{{url_for('individual_bank_report',bank_id=bank.id)}}">{{ investment.name }}</a></td>  <!-- Fetching the person's name -->
-                <td>{{ investment.balance_bfd | currency }}</td>
-                <td>{{ investment.new_balance | currency }}</td>
-                
-            </tr>
-            {% endfor %}
-            {% for equity in equities %}
-            <tr>
-                <td>Cr</td>
-                <td>{{ 500100+equity.id }}</td>
-                <td><a href="{{url_for('individual_bank_report',bank_id=bank.id)}}">{{ equity.name }}</a></td>  <!-- Fetching the person's name -->
-                <td>{{ equity.balance_bfd | currency }}</td>
-                <td>{{ equity.new_balance | currency }}</td>
-                
-            </tr>
-            {% endfor %}
-
-            {% for expense in expenses %}
-            <tr>
-                <td>Cr</td>
-                <td>{{ 800100+expense.id }}</td>
-                <td><a href="{{url_for('individual_bank_report',bank_id=bank.id)}}">{{ expense.name }}</a></td>  <!-- Fetching the person's name -->
-                <td>{{ expense.balance_bfd | currency }}</td>
-                <td>{{ expense.new_balance | currency }}</td>
-                
-            </tr>
             {% endfor %}
             {% for income in incomes %}
             <tr>
                 <td>Cr</td>
                 <td>{{ 600100+income.id }}</td>
-                <td><a href="{{url_for('individual_bank_report',bank_id=bank.id)}}">{{ income.name }}</a></td>  <!-- Fetching the person's name -->
-                <td>{{ income.balance_bfd | currency }}</td>
-                <td>{{ income.new_balance | currency }}</td>
+                <td><a href="">{{ income.name }}</a></td>  <!-- Fetching the person's name -->
+                <td>{{ income.description }}</td>
+                <td>{{ income.balance | currency }}</td>
                 
             </tr>
             {% endfor %}
-            {% for liability in liabilities %}
+            
+            {% for investment in investments %}
             <tr>
                 <td>Cr</td>
-                <td>{{ 500200 + liabilities.id }}</td>
-                <td><a href="{{url_for('individual_bank_report',bank_id=bank.id)}}">{{ investment.name }}</a></td>  <!-- Fetching the person's name -->
-                <td>{{ investment.balance_bfd | currency }}</td>
-                <td>{{ investment.new_balance | currency }}</td>
+                <td>{{ 400200+investment.id }}</td>
+                <td><a href="">{{ investment.name }}</a></td>  <!-- Fetching the person's name -->
+                <td>{{ investment.description}}</td>
+                <td>{{ investment.balance | currency }}</td>
                 
             </tr>
             {% endfor %}
+            <tr>
+                <th colspan="4">Total Assets</th>
+                
+                <th colspan="1">{{total_assets | currency}}</th>
+                
+            </tr>
+            <tr>
+                <th colspan="5">Liabilities</th>
+            </tr>
+            {% for expense in expenses %}
+            <tr>
+                <td>Db</td>
+                <td>{{ 800100+expense.id }}</td>
+                <td><a href="">{{ expense.name }}</a></td>  <!-- Fetching the person's name -->
+                <td>{{ expense.description }}</td>
+                <td>{{ expense.balance | currency }}</td>
+                
+            </tr>
+            {% endfor %}
+
+            <tr>
+                <td>Db</td>
+                <td>500200 </td>
+                <td><a href="{{url_for('get_payments')}}">Accounts Payables</a></td>  <!-- Fetching the person's name -->
+                <td>Total Balance from Members Savings</td>
+                <td>{{ total_accounts_payable | currency }}</td>
+                
+            </tr>
+            
+            {% for liability in liabilities %}
+            <tr>
+                <td>Db</td>
+                <td>{{ 500200 + liability.id }}</td>
+                <td><a href="">{{ liability.name }}</a></td>  <!-- Fetching the person's name -->
+                <td>{{ liability.description}}</td>
+                <td>{{ liability.balance | currency }}</td>
+                
+            </tr>
+            {% endfor %}
+            <tr>
+                <th colspan="4">Total Liability</th>
+                
+                <th colspan="1">{{total_liabilities | currency}}</th>
+                
+            </tr>
+            <tr></tr>
+            <tr>
+                <th colspan="4">Total Equity</th>
+                
+                <th colspan="1">{{total_equity | currency}}</th>
+                
+            </tr>
+            <tr></tr>
+            <tr>
+                <th colspan="4">Total Liability and Equity</th>
+                
+                <th colspan="1">{{total_liabilities_and_equity | currency}}</th>
+                
+            </tr>
         </tbody>
     </table>
     
